// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a table with control buttons 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell headerControlCell"
        >
          <button
            disabled=""
          >
            <span
              aria-hidden="true"
              class="fa fa-pencil"
            />
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell controlCell"
        >
          <button>
            <span
              aria-hidden="true"
              class="fa fa-pencil"
            />
          </button>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render an empty table 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="tablePlaceholderArea"
  >
    <span
      aria-hidden="true"
      class="tablePlaceholderIcon fa fa-battery-quarter"
    />
    <div
      class="tablePlaceholderText"
    >
      No entries
    </div>
  </div>
</div>
`;

exports[`Render the Table component 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in multiple selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            <span
              class="checkbox light"
            >
              <input
                type="checkbox"
              />
              <span />
            </span>
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <span
            class="checkbox dark"
          >
            <input
              type="checkbox"
            />
            <span />
          </span>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in single selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <button
            disabled=""
          />
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
        <th
          class="headerCell"
        >
          <button
            disabled=""
          >
            Column Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <label
            class="radio dark"
          >
            <span
              class="customRadioContainer"
            >
              <input
                type="radio"
              />
              <span
                class="customRadio"
              />
            </span>
          </label>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
